# HDHunter

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  Vagrantfile  tokens.json
example_seeds/: example1  example2  example3
fuzzing_targets/: Makefile  README.md
fuzzing_targets/applications/java_servlet/: pom.xml
fuzzing_targets/applications/python_wsgi/: app.py
fuzzing_targets/applications/ruby_rack/: app.rb  config.ru
fuzzing_targets/runtime/c/: hdhunter_api.h
fuzzing_targets/runtime/python/: hdhunter.py
fuzzing_targets/targets/apache/: .gitignore  apache.diff  build.sh  pack.sh
fuzzing_targets/targets/apache-cgi/: build.sh  pack.sh
fuzzing_targets/targets/apache-resp/: pack.sh
fuzzing_targets/tools/: .gitignore  Makefile  copy_dependencies.py  generate_javafilters.py  monitor_clear_all.sh  monitor_create_all.sh  monitor_delete_all.sh  monitor_edge_map.c  monitor_execution_path.c  monitor_http_param.c  send_to_server.c  upstream_cgi_server.py  upstream_http_server.py
hdhunter/: Cargo.toml
hdhunter-cc/: Cargo.toml
hdhunter-cc/src/: lib.rs  libafl_cc.rs
hdhunter-helper/: Cargo.toml
hdhunter-helper/src/: deduplicate.rs  inputs.rs  main.rs
hdhunter-replay/: Cargo.toml
hdhunter-replay/src/: args.rs  main.rs
hdhunter-rt/: Cargo.toml
hdhunter-rt/src/: java.rs  lib.rs
hdhunter-runner/: Cargo.toml
hdhunter-runner/src/: args.rs  main.rs  run.rs
hdhunter/src/: lib.rs  mode.rs
hdhunter/src/executors/: mod.rs  network_restart.rs  st_nyx.rs
hdhunter/src/feedbacks/: http_param.rs  mod.rs
hdhunter/src/input/: cgi.rs  input.rs  mod.rs  node.rs
hdhunter/src/mutators/: byte.rs  message.rs  mod.rs  sequence.rs  tests.rs
hdhunter/src/observers/: http_param.rs  mod.rs
vendors/QEMU-Nyx/: .gitignore  QEMU-Nyx  compile_qemu_nyx.sh
vendors/Witcher-java/: .gitignore  README  build.sh
vendors/Witcher-python/: .gitignore  build.sh
vendors/Witcher-ruby/: build.sh  vm.c
vendors/hdhunter-ruby3/: .gitignore  build.sh  iseq.c  vm.c  vm_core.h
vendors/libafl_nyx/: .gitignore  Cargo.toml  build_nyx_support.sh
vendors/libafl_targets/: Cargo.toml  build.rs
vendors/libnyx/libnyx/: Cargo.toml  build.rs
vendors/libnyx/libnyx/src/: ffi.rs  lib.rs
vendors/packer/: README.md  nyx.h
(+91 files in other folders)
