[package]
name = "hdhunter-rt"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.13.0", default-features = false }
libafl_targets = { path = "../vendors/libafl_targets", default-features = false }
libafl_bolts = { version = "0.13.0", default-features = false }
hdhunter = { path = "../hdhunter" }
jni = "0.21.1"

[features]
default = ["libafl_targets/sancov_pcguard_hitcounts", "libafl_targets/pointer_maps", "libafl_bolts/std"]
no_edge = []
java = ["no_edge"]

[lib]
name = "hdhunter_rt"
crate-type = ["staticlib", "cdylib"]
