[package]
name = "hdhunter"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.13.0" }
libafl_bolts = { version = "0.13.0" }
libafl_nyx = { path = "../vendors/libafl_nyx", version = "0.13.0-hdhunter" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
ahash = "0.8.11"
rand = "0.9.0-alpha.0"
log = "0.4.21"
chrono = "0.4.37"
clap = { version = "4.5.3" }
byteorder = "1.5.0"

[dev-dependencies]
similar = "2.4.0"